fix image stretching

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -75,6 +75,7 @@
 
 .about-img{
     height: 230px;
+    object-fit: cover;
 }
 
 .card p {
